<?xml version="1.0"?>
<package>
  <name>dmp</name>
  <version>0.0.0</version>
  <description>Implements Dynamic Movement Primitives in a robot agnostic way</description>

  <author>Scott Niekum</author>
  <maintainer email="sniekum@cs.umass.edu">Scott Niekum</maintainer>

  <license>BSD</license>
  
  <url type="website">http://www.ros.org/wiki/dmp</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cmake_modules</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
